--- a/frontend/src/pages/restoring-password/restoring-password.module.scss
+++ b/frontend/src/pages/restoring-password/restoring-password.module.scss
@@ -103,7 +103,6 @@
   width: 100%;
   display: flex;
   font-size: 1vw;
-  margin-top: 0.5vw;
 }
 
 .alertWrapper {
