--- a/frontend/src/pages/team-creation/team-creation.module.scss
+++ b/frontend/src/pages/team-creation/team-creation.module.scss
@@ -19,7 +19,6 @@
   width: 100%;
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
   flex-direction: column;
   box-sizing: content-box;
 }
@@ -93,7 +92,7 @@
   cursor: text;
 
   input {
-    cursor: default;
+    cursor: text;
   }
 }
 
